Adequando para o Github pages.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="imagem">
         <img
           id="minha_foto"
-          src="/img/profilePicture.jpg"
+          src="/trybe-lessons-learned/img/profilePicture.jpg"
           alt="foto de José Lucas"
         />
         <span>Zé</span>
@@ -88,6 +88,6 @@
       Bebe água tbm, é importante 【=◈︿◈=】
     </footer>
 
-    <script async src="/pixelArt.js"></script>
+    <script async src="/trybe-lessons-learned/pixelArt.js"></script>
   </body>
 </html>
