--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- Para rodar no seu sistema direto do clone, remova /trybe-lessons-learned do link abaixo -->
+    <link rel="stylesheet" href="/trybe-lessons-learned/style.css" />
     <title>Projeto Lessons Learned</title>
   </head>
   <body>
@@ -88,6 +89,7 @@
       Bebe água tbm, é importante 【=◈︿◈=】
     </footer>
 
+    <!-- Para rodar no seu sistema direto do clone, remova /trybe-lessons-learned do link abaixo -->
     <script async src="/trybe-lessons-learned/pixelArt.js"></script>
   </body>
 </html>
