Parece mais correto.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
     <footer id="rodape">
       <a href="https://www.youtube.com/watch?v=q-74HTjRbuY" target="_blank"
-        >Ouve essa música, ela é perfeita.</a
+        >Ouça essa música, ela é perfeita.</a
       >
       Bebe água tbm, é importante 【=◈︿◈=】
     </footer>
